syntax = "proto3";

package greet;

option go_package = "github.com/ShamimEnamul/grpc/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

message CalculateRequest{
  int32 val1 = 1;
  int32 val2 = 2;
}

message CalculateResponse{
  int32 sum = 1;
}


service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse);
  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse);
}

//service CalculatorService{
//  rpc Add(CalculateRequest) returns (CalculateResponse);
//}